force-app/main/default/objects/CBS_License_Request__c/CBS_License_Request__c.object-meta.xml
<CustomObject>
    <description>Created for CBS team to submitted, review and complete license requests and assignments. NICC-047058</description>
    <label>Amadeus License Request</label>
    <nameField>
        <label>CBS License Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amadeus License Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>