force-app/main/default/objects/CBS_License_Request__c/fields/Amadeus_Division__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_Division__c</fullName>
    <businessOwnerUser>lertle@newmarketinc.com.sbfull</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Amadeus Division the license request will be associated too. NICC 049478</description>
    <inlineHelpText>Amadeus Division the license request will be associated too.</inlineHelpText>
    <label>Amadeus Division</label>
    <referenceTo>Amadeus_Division__c</referenceTo>
    <relationshipLabel>Amadeus License Requests</relationshipLabel>
    <relationshipName>CBS_License_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>