force-app/main/default/objects/CBS_License_Request__c/fields/License_Request_Description__c.field-meta.xml
<CustomField>
    <fullName>License_Request_Description__c</fullName>
    <description>Brief description of the license request if note for a new hire.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Brief description of the license request if note for a new hire.</inlineHelpText>
    <label>License Request Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>