force-app/main/default/objects/CBS_License_Request__c/fields/MSD_Ticket__c.field-meta.xml
<CustomField>
    <fullName>MSD_Ticket__c</fullName>
    <businessOwnerUser>lertle@newmarketinc.com.sbfull</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MSD Ticket related to this request.  NICC 049478</description>
    <inlineHelpText>MSD Ticket related to this request.</inlineHelpText>
    <label>MSD Ticket</label>
    <referenceTo>MSD_Ticket__c</referenceTo>
    <relationshipLabel>Amadeus License Requests</relationshipLabel>
    <relationshipName>Amadeus_License_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>