force-app/main/default/objects/CBS_License_Request__c/fields/Multiple_Users__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the license request is covering more than one user, check this box.  Please include the user names to be assigned in Chatter post, and/or any activity or files.</description>
    <inlineHelpText>Please check this box is the license request is for license inventory, or if there is a mass update of additional access request.</inlineHelpText>
    <label>Multiple Users</label>
    <type>Checkbox</type>
</CustomField>