force-app/main/default/objects/CBS_License_Request__c/fields/Number_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Line_Items__c</fullName>
    <description>Number of lines on CBS License Request Line Item.</description>
    <inlineHelpText>Number of lines on CBS License Request Line Item.</inlineHelpText>
    <label>Number of Line Items</label>
    <summaryForeignKey>CBS_License_Request_Line_Item__c.CBS_License_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>