force-app/main/default/objects/CBS_License_Request__c/fields/Replenish_License__c.field-meta.xml
<CustomField>
    <fullName>Replenish_License__c</fullName>
    <businessOwnerUser>lertle@newmarketinc.com.sbfull</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <description>If a license is pulled from inventory for this request, but that license was reserved for another request, then a license requisition or SELA Request will have to be submitted. NICC 049478</description>
    <inlineHelpText>If a license is pulled from inventory for this request, but that license was reserved for another request, then a license requisition or SELA Request will have to be submitted.</inlineHelpText>
    <label>Replenish License?</label>
    <type>Checkbox</type>
</CustomField>