force-app/main/default/objects/CBS_License_Request__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <businessOwnerUser>lertle@newmarketinc.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Active employee that license is requested for. NICC 049478</description>
    <inlineHelpText>Active employee that license is requested for.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Amadeus_License_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>