force-app/main/default/objects/CBS_License_Request__c/listViews/All_User_License_Requests.listView-meta.xml
<ListView>
    <fullName>All_User_License_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>MSD_Ticket__c</columns>
    <columns>User__c</columns>
    <columns>License_Assignment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/1/2022 12:00 AM</value>
    </filters>
    <label>All License Requests</label>
</ListView>