force-app/main/default/objects/CBS_License_Request__c/listViews/Open_License_Requests.listView-meta.xml
<ListView>
    <fullName>Open_License_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>License_For_First_Name__c</columns>
    <columns>License_For_Last_Name__c</columns>
    <columns>Multiple_Users__c</columns>
    <columns>License_Assignment_Status__c</columns>
    <columns>License_Type__c</columns>
    <columns>Request_Source__c</columns>
    <columns>Available_from_Reservation__c</columns>
    <columns>Licence_Request_Reason__c</columns>
    <columns>Start_Date__c</columns>
    <columns>MSD_Ticket__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>License_Assignment_Status__c</field>
        <operation>notEqual</operation>
        <value>License Assigned,License Removed,Recalled,Rejected,Inventory Updated,Cancelled</value>
    </filters>
    <label>Open License Requests</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>